style.css
:root {
    --white: #f5f5e8;
    --black: #1d1c22;
    --red-dark: #e54b4b;
    --blue-dark: #15d3ea;

    /* Color mixes */
    --white-black: #3d3d40;
    --red-black: #45252a;
}

html, body {
    scroll-behavior: smooth;
    max-width: 100%;
    overflow-x: hidden;
}

*{
    margin: 0;
    padding: 0;
}

p {
    font-family: 'Lato';
    font-weight: 400;
    font-size: 25px;
}

h1 {
    font-family: 'Quicksand';
    font-weight: bold;
    font-size: 60px;
}

.header {
    min-height: 100vh;
    width: 100%;
    background-color: var(--black);
    font-family: 'Quicksand';
    font-weight: bold;
}

nav {
    display: flex;
    padding: 6% 6%;
    justify-content: space-between;
    align-items: center;
}

nav img {
    width: 64px;
    height: 64px;
}

nav a {
    padding-left: 20px;
    color: var(--white);
    text-decoration: none;
    font-size: 30px;
}

nav a span {
    color: var(--red-dark);
}

.nav-links {
    flex: 1;
    text-align: right;
}

.nav-links ul li {
    list-style: none;
    display: inline-block;
    padding: 8px 12px;
    position: relative;
}

.nav-links ul li::after {
    content: '';
    width: 0%;
    height: 2px;
    background: var(--red-dark);
    display: block;
    margin: auto;
    margin-top: 2px;
    transition: 0.3s;
}

.nav-links ul li:hover::after {
    width: 100%;
}

.nav-links ul li a {
    color: var(--white);
    text-decoration: none;
    font-size: 25px;
    transition: 0.3s;
}

.nav-links ul li a:hover {
    color: var(--red-dark);
}

.text-box {
    width: 90%;
    color: var(--white);
    position: absolute;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
    text-align: center;
}

.text-box img {
    margin-bottom: 50px;
    width: 50vmin;
    height: 50vmin;
}

.text-box span {
    color: var(--red-dark);
}

.text-box p {
    margin: 20px 0 40px 0;
}

section {
    width: 100%;
}

section div {
    padding: 1em 0 1em 0;
    color: var(--white);
    text-align: center;
}

section div h1 span {
    color: var(--red-dark);
}

section div div {
    width: min(50rem, 60vw);
    margin-left: auto;
    margin-right: auto;
    text-align: justify;
}

section div div p {
    padding: 1em 0 0 0;
}

section div div p a {
    color: var(--blue-dark);
}

.about {
    background-color: var(--white-black);
}

.projects,
.copyright {
    background-color: var(--black);
}

.discord {
    background-color: var(--red-black);
    background-image: url(assets/discord-logo.svg);
    background-repeat: no-repeat;
    background-position: 50%;
    background-size: min(30rem, min(90vw, 90vh));
}

.copyright div div {
    width: min(50rem, 60vw);
    margin-left: auto;
    margin-right: auto;
    text-align: center;
}

nav .fa {
    display: none;
}

@media(max-width: 700px) {
    h1 {
        font-size: 30px;
    }

    p {
        font-size: 15px;
    }

    nav {
        justify-content: left;
    }

    nav a {
        padding-left: 20px;
        color: var(--white);
        text-decoration: none;
        font-size: 17px;
    }

    nav img {
        width: 50px;
        height: 50px;
    }

    .nav-links ul li a {
        color: var(--white);
        text-decoration: none;
        font-size: 15px;
        transition: 0.3s;
    }

    .nav-links ul li {
        display: block;
    }

    .nav-links {
        position: fixed;
        background: #45252a;
        height: 100vh;
        width: 30vw;
        top: 0;
        right: -250px;
        text-align: left;
        z-index: 2;
        transition: 0.5s;
    }

    nav .fa {
        display: block;
        color: var(--white);
        margin: 10px;
        font-size: 20px;
        cursor: pointer;
    }

    nav .fa-bars {
        position: absolute;
        right: 6%;
    }

    nav .fa:hover {
        color: var(--red-dark);
    }

    .nav-links ul {
        padding: 2vw 0 0 3vw;
    }

    .nav-links ul li:hover::after {
        width: 0%;
    }
}

